--- a/index.html
+++ b/index.html
@@ -18,11 +18,22 @@
             border-radius: 10px;
             border: none;
         }
+
+        button:hover{
+            background: orange;
+        }
     </style>
 </head>
 <body>
     <h1>Guess Number</h1>
-    <input type="text">
-    <button>Guess</button>
+    <input type="text" id="num">
+    <button id="btn">Guess</button>
+    <script>
+        const num = document.getElementById('num');
+        const btn = document.getElementById('btn');
+        btn.addEventListener('click', function(e) {
+            console.log(num.value);
+        });
+    </script>
 </body>
 </html>
