--- a/index.html
+++ b/index.html
@@ -26,13 +26,21 @@
 </head>
 <body>
     <h1>Guess Number</h1>
-    <input type="text" id="num">
+    <input type="text" id="num" />
     <button id="btn">Guess</button>
     <script>
-        const num = document.getElementById('num');
         const btn = document.getElementById('btn');
+        const random = Math.floor(Math.random() * 6) + 1;
+
         btn.addEventListener('click', function(e) {
-            console.log(num.value);
+            const num = document.getElementById('num').value;
+            if(! num) {
+                alert('input something, please!');
+                return;
+            }
+
+            console.log(random);
+            console.log(num);
         });
     </script>
 </body>
