--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <h1>Guess Number</h1>
-    <input type="text" id="num" />
+    <input type="number" id="num" />
     <button id="btn">Guess</button>
     <script>
         const btn = document.getElementById('btn');
@@ -34,10 +34,12 @@
 
         btn.addEventListener('click', function(e) {
             const num = document.getElementById('num').value;
+            //如果沒有輸入數字
             if(! num) {
                 alert('input something, please!');
                 return;
             }
+            
 
             console.log(random);
             console.log(num);
