--- a/index.html
+++ b/index.html
@@ -33,13 +33,36 @@
         const random = Math.floor(Math.random() * 6) + 1;
 
         btn.addEventListener('click', function(e) {
-            const num = document.getElementById('num').value;
+            let num = (document.getElementById('num')).value;
+            //盡早return，當發現程式碼不會執行
             //如果沒有輸入數字
             if(! num) {
                 alert('input something, please!');
                 return;
             }
-            
+            if(num > 6){
+                alert('input number 1 ~ 6, please');
+                return;
+            }
+
+            console.log("random:" + random);
+            console.log(typeof num);
+            num = parseInt(num);  //把字串轉換成數字
+            console.log(typeof random);
+
+            if (num === random) {  //triple等於是嚴格的判斷
+                alert('Good Job, You are right ~ ');
+                return;
+            }
+
+            if(num > random) {
+                alert('smaller, please!');
+                return;
+            }
+
+            if(num < random) {
+                alert('Hey bigger, please!');
+            }
 
             console.log(random);
             console.log(num);
