--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             background: orange;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
 <body>
     <h1>Guess Number</h1>
