add local position

--- a/index.html
+++ b/index.html
@@ -90,5 +90,7 @@
             console.log(num);
         });
     </script>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore.
+    Lorem ipsum dolor sit.
 </body>
 </html>
